updated with church name and info

--- a/contact.html
+++ b/contact.html
@@ -3,17 +3,21 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Church &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>THE EMET HOUSE CHAPEL INTERNATIONAL (T.E.H.C.I) || Contact</title>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	
+	<meta name="description" content="A Christian Organization crafted by God in His own 
+	wisdom to fulfil an agenda and to make known His purposes to His children. This idea of God is 
+	responsible for establishing the kingdom of God in the lives of people. We understand from the 
+	Scriptures according to Amos 3: 7 (NIV) “Surely the Sovereign Lord does nothing without 
+	revealing His plan to His servants the prophets” " />
+
+	<meta name="keywords" content="Church, Bible, Christian, God, Jesus, Religon, Gospel, Ministries, pastor , Philanthropy" />
+	<meta name="author" content="Yusontech" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
 		
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
@@ -76,7 +80,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-md-12 col-offset-0 text-center">
-						<div id="fh5co-logo"><a href="index.html">Church</a></div>
+						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
@@ -200,25 +204,25 @@
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="col-md-4 text-center">
-				<h3>198 West 21th Street, Suite 721 New York NY 10016</h3>
+				<h3>Taifa, Mr. Adjei last stop, near God first House , Accra, Ghana.</h3>
 			</div>
 			<div class="col-md-4 text-center">
-				<h2><a href="#">Church</a></h2>
+				<h2><a href="#">The Emet House Chapel International <br> (T.E.H.C.I)</a></h2>
 			</div>
 			<div class="col-md-4 text-center">
 				<p>
 					<ul class="fh5co-social-icons">
-						<li><a href="#"><i class="icon-twitter2"></i></a></li>
-						<li><a href="#"><i class="icon-facebook2"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+						<li><a href="https://twitter.com/BernardSikapa" target="_blank"><i class="icon-twitter2" ></i></a></li>
+						<li><a href="https://web.facebook.com/theEmetHouse/" target="_blank"><i class="icon-facebook2"></i></a></li>
+						<li><a href="https://www.instagram.com/explore/locations/100207761843198/emet-house-chapel-international/" target="_blank"><i class="icon-instagram"></i></a></li>
 					</ul>
 				</p>
 			</div>
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2021 T.E.H.C.I. All Rights Reserved.</small> 
+						<!-- <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
 					</p>
 				</div>
 			</div>
