updated with dummy pics

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<aside id="fh5co-hero">
 			<div class="flexslider">
 				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_1.jpg);">
+			   	<li class="slides-bg" style="background-image: url(images/img_bg_4.jpg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -124,7 +124,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/img_bg_2.jpg);">
+			   	<li class="slides-bg" style="background-image: url(images/img_bg_5.jpg);">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluid">
 			   			<div class="row">
@@ -140,7 +140,7 @@
 				   		</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(images/img_bg_3.jpg);">
+			   	<li class="slides-bg" style="background-image: url(images/img_bg_6.jpg); ">
 			   		<div class="overlay"></div>
 			   		<div class="container-fluids">
 			   			<div class="row">
@@ -172,7 +172,7 @@
 				</div>
 				<div class="row service-days" >
 					<div class="col-md-6 col-md-offset-3 text-center fh5co-heading ">
-						<h2>Our Service Days</h2>
+						<h3>Our Service Days</h3>
 						<!-- <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p> -->
 					</div>
 					<div class="col-md-4 animate-box">
