updated with css

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 			<div class="row">
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
 						<div class="desc">
 							<h3><a href="#">Live Church Service</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -253,7 +253,7 @@
 
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
 						<div class="desc">
 							<h3><a href="#">Summit and conferences</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -263,7 +263,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
 						<div class="desc">
 							<h3><a href="#"> Philanthropy</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -273,7 +273,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
 						<div class="desc">
 							<h3><a href="#">Societal growth events</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
