update links and content

--- a/contact.html
+++ b/contact.html
@@ -80,14 +80,14 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-md-12 col-offset-0 text-center">
-						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
+						<div id="fh5co-logo"><a href="./index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="sermons.html">Sermons</a></li>
+							<li><a href="./index.html">Home</a></li>
+							<li><a href="./sermons.html">Sermons</a></li>
 							<li class="has-dropdown">
-								<a href="news.html">News</a>
+								<a href="./news.html">News</a>
 								<ul class="dropdown">
 									<li><a href="#">Ministry</a></li>
 									<li><a href="#">Medical Missionary</a></li>
@@ -95,10 +95,10 @@
 									<li><a href="#">Gospel Workers</a></li>
 								</ul>
 							</li>
-							<li><a href="events.html">Events</a></li>
-							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
-							<li><a href="#" class="donate">Donate</a></li>
+							<li><a href="./events.html">Events</a></li>
+							<li><a href="./about.html">About</a></li>
+							<li class="active"><a href="./contact.html">Contact</a></li>
+							<li><a href="./donate.html" class="donate">Donate</a></li>
 						</ul>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1>Contact Us</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+										<h2>Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -137,14 +137,17 @@
 				<div class="col-md-3 col-md-push-8 animate-box">
 					<h3>Our Address</h3>
 					<ul class="contact-info">
-						<li><i class="icon-location4"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="icon-phone3"></i>+ 1235 2355 98</li>
-						<li><i class="icon-location3"></i><a href="#">info@yoursite.com</a></li>
-						<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+						<li><i class="icon-location4"></i>Taifa Mr. Adjei last stop, near God first House, kumasi ,Ghana</li>
+						<li><i class="icon-phone3"></i><a href="tel:+233261219988">+233 261219988</a></li>
+						<li><i class="icon-phone3"></i><a href="tel:+233243932282">+233 243932282</a></li>
+						<li><i class="icon-phone3"></i><a href="tel:+233243934110">+233 243934110</a></li>
+						
+						<li><i class="icon-location3"></i><a href="mailto:emethousechapel@gmail.com">emethousechapel@gmail.com</a></li>
+						<!-- <li><i class="icon-globe2"></i><a href="#">www.emethouse.com</a></li> -->
 					</ul>
 				</div>
 				<div class="col-md-7 col-md-pull-2 animate-box">
-					<div class="row">
+					<from class="row">
 						<div class="col-md-6">
 							<div class="form-group">
 								<input type="text" class="form-control" placeholder="Name">
@@ -152,7 +155,7 @@
 						</div>
 						<div class="col-md-6">
 							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Email">
+								<input type="email" class="form-control" placeholder="Email">
 							</div>
 						</div>
 						<div class="col-md-12">
@@ -165,7 +168,7 @@
 								<input type="submit" value="Send Message" class="btn btn-primary btn-modify">
 							</div>
 						</div>
-					</div>
+					</from>
 				</div>
 			</div>
 		</div>
@@ -204,7 +207,7 @@
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="col-md-4 text-center">
-				<h3>Taifa, Mr. Adjei last stop, near God first House , Accra, Ghana.</h3>
+				<h3>Taifa, Mr. Adjei last stop, near God first House ,kumasi , Ghana.</h3>
 			</div>
 			<div class="col-md-4 text-center">
 				<h2><a href="#">The Emet House Chapel International <br> (T.E.H.C.I)</a></h2>
