--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
 			<div class="row animate-box">
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<h2 style="line-height: 8vh;">
-						➢ Leadership
-						➢ Mentorship
-						➢ Career orientation
-						➢ Knowledge
-						➢ Charity
-						➢ Successful family life</h2>
+						➢ Church service
+						➢ Summit and conferences
+						➢ Philanthropy
+						➢ Societal growth events
+					</h2>
 				</div>
 				<div class="row service-days" >
 					<div class="col-md-6 col-md-offset-3 text-center fh5co-heading ">
