--- a/donate.html
+++ b/donate.html
@@ -3,17 +3,17 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>THE EMET HOUSE CHAPEL INTERNATIONAL (T.E.H.C.I) || About</title>
+	<title>THE EMET HOUSE CHAPEL INTERNATIONAL (T.E.H.C.I) || Donate</title>
 
-	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 	<meta name="description" content="A Christian Organization crafted by God in His own 
 	wisdom to fulfil an agenda and to make known His purposes to His children. This idea of God is 
 	responsible for establishing the kingdom of God in the lives of people. We understand from the 
 	Scriptures according to Amos 3: 7 (NIV) “Surely the Sovereign Lord does nothing without 
 	revealing His plan to His servants the prophets” " />
 
-	<meta name="keywords" content="Church, Bible, Christian, God, Jesus, Religon, Gospel, Ministries, pastor, Philanthropy" />
+	<meta name="keywords" content="Church, Bible, Christian, God, Jesus, Religon, Gospel, Ministries, pastor , Philanthropy" />
 	<meta name="author" content="Yusontech" />
 
 	<!-- 
@@ -80,7 +80,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-md-12 col-offset-0 text-center">
-						<div id="fh5co-logo"><a href="./index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
+						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
@@ -96,9 +96,9 @@
 								</ul>
 							</li>
 							<li><a href="./events.html">Events</a></li>
-							<li class="active"><a href="./about.html">About</a></li>
-							<li><a href="./contact.html">Contact</a></li>
-							<li><a href="./donate.html" class="donate">Donate</a></li>
+							<li><a href="./about.html">About</a></li>
+							<li ><a href="./contact.html">Contact</a></li>
+							<li class="active"><a href="./donate.html" class="donate">Donate</a></li>
 						</ul>
 					</div>
 				</div>
@@ -116,8 +116,8 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>About Us</h1>
-										<h2>The city of Truth and Salvation <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+				   					<h1>Donate to The Course</h1>
+										<h2>Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -126,41 +126,49 @@
 			  	</ul>
 		  	</div>
 		</aside>
-		<div id="fh5co-about">
+		<div id="fh5co-contact">
+			<div class="row animate-box">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>Donate to The Course</h2>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+				</div>
+			</div>
 			<div class="row">
-				<div class="col-md-4">
-					<h3>Daily Verse</h3>
-					<blockquote class="dailyVerse">
-						<p>&ldquo;The LORD [is] my strength and my shield; my heart trusted in him, and I am helped: therefore my heart greatly rejoiceth; and with my song will I praise him.&rdquo;</p>
-						<span>Psalms 28:7</span>
-					</blockquote>
-				</div>
-				<div class="col-md-4">
-					<h3>Our Mission</h3>
-				
-					<p>We position ourselves to be a channel of transformation where nobody becomes somebody
-						through the power of our Lord Jesus Christ.</p>
-
-					<p>We provide quality mentorship to people to gain solid grounds in their career and family
-						life.</p>
-					<p>We are positioned in raising generals in this end time to be labourers in God’s vineyard.</p>
-					<p>We are sent with the prophetic mandate to reveal the purposes of God to this generations.</p>
-					<p>By the ministration of the spirit, the gifts of the spirit will be activated and prevail in the
-						lives of people.</p>
-				</div>
-				<div class="col-md-4">
-					<h3>Our Ministries and Vision Structure</h3>
-					<p style="line-height: 2.5rem;">To rescue the perishing through the word of God to be a people of God’s own image and likeness,
-						ready to possess the promises of the Lord and to be a channel through which God’s intended
-						prophecies will be fulfilled on earth so as to gain dominance, victory, salvation and faith through
-						our Lord Jesus Christ</p>
-					<ul class="ministries-list">
-						<li><i class="icon-check"></i>Mentorship</li>
-						<li><i class="icon-check"></i>Career orientation</li>
-						<li><i class="icon-check"></i>Knowledge</li>
-						<li><i class="icon-check"></i>Charity</li>
-						<li><i class="icon-check"></i>Successful family life</li>
+				<div class="col-md-3 col-md-push-8 animate-box">
+					<h3>Our Address</h3>
+					<ul class="contact-info">
+						<li><i class="icon-location4"></i>Taifa Mr. Adjei last stop, near God first House, kumasi ,Ghana</li>
+						<li><i class="icon-phone3"></i><a href="tel:+233261219988">+233 261219988</a></li>
+						<li><i class="icon-phone3"></i><a href="tel:+233243932282">+233 243932282</a></li>
+						<li><i class="icon-phone3"></i><a href="tel:+233243934110">+233 243934110</a></li>
+						
+						<li><i class="icon-location3"></i><a href="mailto:emethousechapel@gmail.com">emethousechapel@gmail.com</a></li>
+						<!-- <li><i class="icon-globe2"></i><a href="#">www.emethouse.com</a></li> -->
 					</ul>
+				</div>
+				<div class="col-md-7 col-md-pull-2 animate-box">
+					<from class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<input type="text" class="form-control" placeholder="Name">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<input type="email" class="form-control" placeholder="Email">
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+								<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="submit" value="Send Message" class="btn btn-primary btn-modify">
+							</div>
+						</div>
+					</from>
 				</div>
 			</div>
 		</div>
@@ -199,7 +207,7 @@
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="col-md-4 text-center">
-				<h3>Taifa, Mr. Adjei last stop, near God first House , Accra, Ghana.</h3>
+				<h3>Taifa, Mr. Adjei last stop, near God first House ,kumasi , Ghana.</h3>
 			</div>
 			<div class="col-md-4 text-center">
 				<h2><a href="#">The Emet House Chapel International <br> (T.E.H.C.I)</a></h2>
