--- a/sermons.html
+++ b/sermons.html
@@ -79,14 +79,14 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-md-12 col-offset-0 text-center">
-						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
+						<div id="fh5co-logo"><a href="./index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="sermons.html">Sermons</a></li>
+							<li><a href="./index.html">Home</a></li>
+							<li class="active"><a href="./sermons.html">Sermons</a></li>
 							<li class="has-dropdown">
-								<a href="news.html">News</a>
+								<a href="./news.html">News</a>
 								<ul class="dropdown">
 									<li><a href="#">Ministry</a></li>
 									<li><a href="#">Medical Missionary</a></li>
@@ -94,10 +94,10 @@
 									<li><a href="#">Gospel Workers</a></li>
 								</ul>
 							</li>
-							<li><a href="events.html">Events</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="#" class="donate">Donate</a></li>
+							<li><a href="./events.html">Events</a></li>
+							<li><a href="./about.html">About</a></li>
+							<li><a href="./contact.html">Contact</a></li>
+							<li><a href="./donate.html" class="donate">Donate</a></li>
 						</ul>
 					</div>
 				</div>
