--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,8 @@
 						<li><i class="icon-phone3"></i><a href="tel:+233243932282">+233 243932282</a></li>
 						<li><i class="icon-phone3"></i><a href="tel:+233243934110">+233 243934110</a></li>
 						
-						<li><i class="icon-location3"></i><a href="mailto:emethousechapel@gmail.com">emethousechapel@gmail.com</a></li>
-						<!-- <li><i class="icon-globe2"></i><a href="#">www.emethouse.com</a></li> -->
+						<li><i class="icon-mail2"></i><a href="mailto:emethousechapel@gmail.com">emethousechapel@gmail.com</a></li>
+						<li><i class="icon-location3"></i><a href="#">P.O. Box 1363, Adum, Kumasi.</a></li>
 					</ul>
 				</div>
 				<div class="col-md-7 col-md-pull-2 animate-box">
