--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<!-- 
 	//////////////////////////////////////////////////////
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
+	Website: 		http://lorem lorem/
+	Email: 			info@lorem lorem
 	Twitter: 		http://twitter.com/fh5co
 	Facebook: 		https://www.facebook.com/fh5co
 
@@ -77,7 +77,7 @@
 		<div class="container-wrap">
 			<div class="top-menu">
 				<div class="row">
-					<div class="col-md-12 col-offset-0 text-center">
+					<div class="col-md-11 col-offset-0 text-center">
 						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
@@ -116,8 +116,8 @@
 				   				<div class="slider-text">
 					   				<div class="slider-text-inner">
 					   					<h1>Sermon 3 &amp;</h1>
-											<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
+											<h2>lorem lorem Made by <a href="http://lorem lorem/" target="_blank">lorem lorem</a></h2>
+											<p><a class="btn btn-primary btn-demo popup-vimeo" href="#"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
 					   				</div>
 				   				</div>
 				   			</div>
@@ -132,8 +132,8 @@
 				   				<div class="slider-text">
 					   				<div class="slider-text-inner">
 					   					<h1>Sermon 3</h1>
-											<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
+											<h2>lorem lorem Made by <a href="http://lorem lorem/" target="_blank">lorem lorem</a></h2>
+											<p><a class="btn btn-primary btn-demo popup-vimeo" href="#"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
 					   				</div>
 					   			</div>
 				   			</div>
@@ -148,8 +148,8 @@
 				   				<div class="slider-text">
 					   				<div class="slider-text-inner text-center">
 					   					<h1>Sermon 3</h1>
-											<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-											<p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
+											<h2>lorem lorem Made by <a href="http://lorem lorem/" target="_blank">lorem lorem</a></h2>
+											<p><a class="btn btn-primary btn-demo popup-vimeo" href="#"> <i class="icon-play4"></i> Watch Video</a> <a class="btn btn-primary btn-learn">Join us here! <i class="icon-arrow-right3"></i></a></p>
 					   				</div>
 					   			</div>
 				   			</div>
@@ -163,8 +163,8 @@
 			<div class="row animate-box">
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<h2 style="line-height: 8vh;">
-						➢ Church service
-						➢ Summit and conferences
+						➢ Church service 
+						➢ Summit & conferences
 						➢ Philanthropy
 						➢ Societal growth events
 					</h2>
@@ -240,7 +240,7 @@
 			<div class="row">
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<h3><a href="#">Live Church Service</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -252,7 +252,7 @@
 
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-2.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<h3><a href="#">Summit and conferences</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -262,7 +262,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-3.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<h3><a href="#"> Philanthropy</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -272,7 +272,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="services">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/activity-1.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<h3><a href="#">Societal growth events</a></h3>
 							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -295,7 +295,7 @@
 					<div class="sermon-entry">
 						<div class="sermon" style="background-image: url(images/sermon-1.jpg);">
 							<div class="play">
-								<a class="popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play3"></i></a>
+								<a class="popup-vimeo" href="#"><i class="icon-play3"></i></a>
 							</div>
 						</div>
 						<h3>Soul Winning</h3>
@@ -306,7 +306,7 @@
 					<div class="sermon-entry">
 						<div class="sermon" style="background-image: url(images/sermon-3.jpg);">
 							<div class="play">
-								<a class="popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play3"></i></a>
+								<a class="popup-vimeo" href="#"><i class="icon-play3"></i></a>
 							</div>
 						</div>
 						<h3>Message From God</h3>
@@ -317,7 +317,7 @@
 					<div class="sermon-entry">
 						<div class="sermon" style="background-image: url(images/sermon-2.jpg);">
 							<div class="play">
-								<a class="popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play3"></i></a>
+								<a class="popup-vimeo" href="#"><i class="icon-play3"></i></a>
 							</div>
 						</div>
 						<h3>Our World Today</h3>
@@ -406,7 +406,7 @@
 			<div class="row">
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Live News</a></h3>
@@ -417,7 +417,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Biblical Counseling</a></h3>
@@ -428,7 +428,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -439,7 +439,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt="Free HTML5 Website Template by lorem lorem"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -473,7 +473,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2021 T.E.H.C.I. All Rights Reserved.</small> 
-						<!-- <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
+						<!-- <small class="block">Designed by <a href="http://lorem lorem/" target="_blank">lorem lorem</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
 					</p>
 				</div>
 			</div>
