--- a/news.html
+++ b/news.html
@@ -18,8 +18,8 @@
 	<!-- 
 	//////////////////////////////////////////////////////
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
+	Website: 		http://lorem lorem.co/
+	Email: 			info@lorem lorem.co
 	Twitter: 		http://twitter.com/fh5co
 	Facebook: 		https://www.facebook.com/fh5co
 
@@ -97,7 +97,8 @@
 							<li><a href="./events.html">Events</a></li>
 							<li><a href="./about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li><a href="./donate.html" class="donate">Donate</a></li>
+							<li><a href="./donate.html
+								" class="donate">Donate</a></li>
 						</ul>
 					</div>
 				</div>
@@ -116,7 +117,7 @@
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1>News</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+										<h2>Made by <a href="http://lorem lorem.co/" target="_blank">lorem lorem.co</a></h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -135,7 +136,7 @@
 			<div class="row">
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Live News</a></h3>
@@ -146,7 +147,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt=" lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Biblical Counseling</a></h3>
@@ -157,7 +158,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt=" lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -168,7 +169,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -179,7 +180,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-1.jpg" alt="lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Live News</a></h3>
@@ -190,7 +191,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-3.jpg" alt="lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Biblical Counseling</a></h3>
@@ -201,7 +202,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-2.jpg" alt=" lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -212,7 +213,7 @@
 				</div>
 				<div class="col-md-3 animate-box">
 					<div class="news">
-						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt="Free HTML5 Website Template by freehtml5.co"></a>
+						<a href="#" class="img-holder"><img class="img-responsive" src="images/img-4.jpg" alt=" lorem lorem.co"></a>
 						<div class="desc">
 							<span class="date">March 30, 2017</span>
 							<h3><a href="#">Helping Children</a></h3>
@@ -276,7 +277,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2021 T.E.H.C.I. All Rights Reserved.</small> 
-						<!-- <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
+						<!-- <small class="block">Designed by <a href="http://lorem lorem.co/" target="_blank">lorem lorem.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
 					</p>
 				</div>
 			</div>
