--- a/sermons.html
+++ b/sermons.html
@@ -18,8 +18,8 @@
 	<!-- 
 	//////////////////////////////////////////////////////
 		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
+	Website: 		#
+	Email: 			info@lorem lorem
 	Twitter: 		http://twitter.com/fh5co
 	Facebook: 		https://www.facebook.com/fh5co
 
@@ -116,7 +116,7 @@
 				   			<div class="col-md-6 col-md-offset-3 text-center slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1>Watch Our Sermons</h1>
-										<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+										<h2>Free html5 templates Made by <a href="#" target="_blank">lorem lorem</a></h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -254,7 +254,7 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2021 T.E.H.C.I. All Rights Reserved.</small> 
-						<!-- <small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
+						<!-- <small class="block">Designed by <a href="#" target="_blank">lorem lorem</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small> -->
 					</p>
 				</div>
 			</div>
