--- a/donate.html
+++ b/donate.html
@@ -165,7 +165,7 @@
 						</div>
 						<div class="col-md-12">
 							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary btn-modify">
+								<input type="submit" value="Donate" class="btn btn-primary btn-modify">
 							</div>
 						</div>
 					</from>
