--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 		<div class="container-wrap">
 			<div class="top-menu">
 				<div class="row">
-					<div class="col-md-11 col-offset-0 text-center">
-						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL <br> (T.E.H.C.I)</a> <br> The city of Truth and Salvation</div>
+					<div class="col-md-12 col-offset-0 text-center">
+						<div id="fh5co-logo"><a href="index.html">THE EMET HOUSE CHAPEL INTERNATIONAL<br>(T.E.H.C.I)</a><br><span>The city of Truth and Salvation</span></div>
 					</div>
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
@@ -162,11 +162,11 @@
 		<div id="fh5co-intro">
 			<div class="row animate-box">
 				<div class="col-md-12 col-md-offset-0 text-center">
-					<h2 style="line-height: 8vh;">
-						➢ Church service 
-						➢ Summit & conferences
-						➢ Philanthropy
-						➢ Societal growth events
+					<h2 style="line-height: 7vh;">
+						<li>Church service </li>
+						<li>Summit & conferences</li>
+						<li>Societal growth events</li>
+						<li>Philanthropy</li>
 					</h2>
 				</div>
 				<div class="row service-days" >
@@ -199,7 +199,7 @@
 			</div>
 		</div>
 		<hr>
-		<!-- <div id="fh5co-counter" class="fh5co-counters">
+		<div id="fh5co-counter" class="fh5co-counters">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center animate-box">
 					<p>We have a fun facts far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -228,7 +228,7 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<div id="fh5co-services" class="fh5co-light-grey">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
