--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 							<li><a href="./events.html">Events</a></li>
 							<li><a href="./about.html">About</a></li>
 							<li class="active"><a href="./contact.html">Contact</a></li>
-							<li><a href="./donate.html" class="donate">Donate</a></li>
+							<li><a href="./donate.html" >Donate</a></li>
 						</ul>
 					</div>
 				</div>
