--- a/sermons.html
+++ b/sermons.html
@@ -97,7 +97,7 @@
 							<li><a href="./events.html">Events</a></li>
 							<li><a href="./about.html">About</a></li>
 							<li><a href="./contact.html">Contact</a></li>
-							<li><a href="./donate.html" class="donate">Donate</a></li>
+							<li><a href="./donate.html" >Donate</a></li>
 						</ul>
 					</div>
 				</div>
